[[bin]]
name = 'interview'
path = 'src/0000.interview/solution.rs'

[[bin]]
name = 'two-sum'
path = 'src/0001.two-sum/solution.rs'

[[bin]]
name = 'roman-to-integer'
path = 'src/0013.roman-to-integer/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2021'
name = 'leetcode-solutions'
version = '0.1.0'
